feat: basic timetable with fake data

--- a/src/app/pages/course/components/timetable/timetable.component.html
+++ b/src/app/pages/course/components/timetable/timetable.component.html
@@ -1,1 +1,99 @@
-<p>timetable works!</p>
+<!-- <div class="left_area">
+	<div id="user_data" class="personal_data"> 
+		<div class="personal_data_image">
+			<img :src="user_data.user_photo" >
+		</div>
+		<div class="personal_data_info">
+			<p class="text_24">{{ user_data.user_name }}的課表</p>
+			<p class="text_16 text_dark">目前已排課 {{ credit_count }} 學分</p>		
+		</div>
+	</div>
+	<div id="quick_search" class="quick_search"> 
+		<div class="block_title">
+			<p class="text_18 "> {{ title_text }} </p>
+		</div>
+		<div class="quick_search_area" :class="{ filter_mode: filter_status }"  @click="clearFilter">
+			<div *ngIf="filter_status" class="quick_search_clear_filter"></div>
+			<input class="quick_search_input" type="text" v-model.trim="keyword" :disabled="filter_status || page_status.table_locked" :class="{ locked: page_status.table_locked }" placeholder="輸入「課程名」或「教師名」" ><br>
+		</div>
+		<div *ngIf="keyword.replace(' ','') != '' && !filter_status && !page_status.table_locked" class="quick_search_dropdown">
+			<span> {{ result }} </span>
+			<p *ngIf="!result_cont.length && !filter_status && !page_status.table_locked" class="quick_search_dropdown__no_result text_dark">查無此關鍵字結果。</p>
+			<result-list-item *ngFor="item in result_cont" :class_item="item"></result-list-item>
+		</div>
+	</div>
+	<div id="wishlist_in_table" class="wishlist in_table">
+		<div class="block_title">
+			<p *ngIf="!filter_status" class="text_18">願望清單（{{ wishlist_cont.length }}） </p>
+			<p *ngIf=" filter_status" class="text_18">願望清單（符合所選時段） </p>
+		</div>
+		<div class="wishlist_cont" :class="{ locked: page_status.table_locked }" >
+			<p *ngIf="!wishlist_cont.length && !filter_status" class="wishlist_cont__no_result text_dark">尚未新增任何課程進入願望清單。</p>
+			<p *ngIf="!filter_item_count && filter_status" class="wishlist_cont__no_result text_dark">願望清單內無符合本時段之項目。</p>
+			<wishlist-item *ngFor="item in wishlist_cont" :class_item="item"></wishlist-item>
+		</div>
+	</div>
+</div> -->
+
+<div class="right_area">
+	<div id="class_table" class="class_table" [ngClass]="{ locked: isLocked }">
+		<div *ngIf="!tempTable.length && isLocked" (click)="switchToEdit()" class="class_table__empty_hint">
+			<p class="class_table__empty_hint__text text_bold">目前課表為空，來安排下學期的課程吧！</p>
+		</div>
+		<div class="class_table_title">
+			<div class="class_table_title_cell left">　</div>
+			<div class="class_table_title_cell"><p class="text_18">Mon</p></div>
+			<div class="class_table_title_cell"><p class="text_18">Tue</p></div>
+			<div class="class_table_title_cell"><p class="text_18">Wed</p></div>
+			<div class="class_table_title_cell"><p class="text_18">Thu</p></div>
+			<div class="class_table_title_cell"><p class="text_18">Fri</p></div>
+		</div>
+		<div class="class_table_cont">
+			<div class="class_table_cont__normal">
+				<div class="class_table_cont_row left">
+					<div class="class_table_cont_cell"><p class="text_18 round">1</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">2</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">3</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">4</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">N</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">5</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">6</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">7</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">8</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">9</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">A</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">B</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">C</p></div>
+					<div class="class_table_cont_cell"><p class="text_18 round">D</p></div>
+				</div>
+				<div class="class_table_cont_row">
+					<app-table-cell *ngFor="let item of coursesOnWorkdays[0]" [cellData]="item"></app-table-cell>
+				</div>
+				<div class="class_table_cont_row">
+					<app-table-cell *ngFor="let item of coursesOnWorkdays[1]" [cellData]="item"></app-table-cell>
+				</div>
+				<div class="class_table_cont_row">
+					<app-table-cell *ngFor="let item of coursesOnWorkdays[2]" [cellData]="item"></app-table-cell>
+				</div>
+				<div class="class_table_cont_row">
+					<app-table-cell *ngFor="let item of coursesOnWorkdays[3]" [cellData]="item"></app-table-cell>
+				</div>
+				<div class="class_table_cont_row">
+					<app-table-cell *ngFor="let item of coursesOnWorkdays[4]" [cellData]="item"></app-table-cell>
+				</div>
+			</div>
+			<div *ngIf="coursesOnOtherDays.length" class="class_table_cont__other">
+				<div class="class_table_cont_row left">
+					<div class="class_table_cont_cell other"><p class="text_18">其他</p></div>
+				</div>
+				<div class="class_table_cont_row right_full">
+					<div *ngFor="let item of coursesOnOtherDays" class="class_table_cont_cell other class_cell occupied" [ngClass]="item.deptId">
+						<div class="class_table_cont_cell_button other"  (click)="deleteItem( item.id )"></div>
+						<p class="class_table_cont_cell_id other text_12"> {{ item.time }}</p>
+						<p class="class_table_cont_cell_title other text_16 text_bold"> {{ item.courseName }} </p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
