--- a/src/assets/scss/componentes/add_review.scss
+++ b/src/assets/scss/componentes/add_review.scss
@@ -340,7 +340,7 @@
                             opacity: 1;
                             p,
                             span {
-                                color: $red;
+                                color: red;
                             }
                         }
                     }
