--- a/src/app/pages/course/components/course-search/course-search.component.scss
+++ b/src/app/pages/course/components/course-search/course-search.component.scss
@@ -1,3 +1,4 @@
+@import '../../../../../assets/scss/componentes/button.scss';
 //course.sass
 /* colors */
 $colorBlue1: #1a77b4;
@@ -19,7 +20,7 @@ $colorgrey250: rgb(250, 250, 250);
     top: 30px;
     right: 0;
 
-    &>div {
+    & > div {
         margin: 6px 0;
     }
 }
@@ -46,12 +47,12 @@ a:-webkit-any-link
   text-decoration: none
 
 /* reset style of input number */
-input[type=number]:not(.browser-default) {
+input[type='number']:not(.browser-default) {
     // -webkit-appearance: none
     appearance: none;
 }
 
-input[type=number]::-webkit-inner-spin-button {
+input[type='number']::-webkit-inner-spin-button {
     -webkit-appearance: none;
     appearance: none;
 }
@@ -68,7 +69,7 @@ input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
 
-input[type=checkbox] {
+input[type='checkbox'] {
     -webkit-appearance: none;
     appearance: none;
     background-color: #eeeeee;
@@ -77,13 +78,13 @@ input[type=checkbox] {
     border-radius: 2px;
 }
 
-input[type=checkbox]:checked {
+input[type='checkbox']:checked {
     -webkit-appearance: none;
     appearance: none;
-    background-color: #1A6CBD;
+    background-color: #1a6cbd;
 }
 
-input[type=checkbox]:focus {
+input[type='checkbox']:focus {
     outline: none;
 }
 
@@ -96,17 +97,17 @@ input[type=checkbox]:focus {
     display: flex;
     align-items: center;
     cursor: pointer;
-    transition: .2s cubic-bezier(0.0, 0.0, 0.2, 1), padding .3s cubic-bezier(0.0, 0.0, 0.2, 1);
+    transition: 0.2s cubic-bezier(0, 0, 0.2, 1), padding 0.3s cubic-bezier(0, 0, 0.2, 1);
 
     &:hover {
-        box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.10);
+        box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.1);
     }
 
     &--btn:hover {
         padding: 14px 50px 14px 24px;
 
         & p {
-            color: #F35A5A;
+            color: #f35a5a;
             font-weight: bold;
             padding-left: 12px;
         }
@@ -122,7 +123,7 @@ input[type=checkbox]:focus {
     }
 
     p {
-        transition: .2s cubic-bezier(0.0, 0.0, 0.2, 1);
+        transition: 0.2s cubic-bezier(0, 0, 0.2, 1);
         padding-left: 14px;
     }
 
@@ -158,16 +159,16 @@ input[type=checkbox]:focus {
 }
 
 .checkmark:after {
-    content: "";
+    content: '';
     position: absolute;
     display: none;
 }
 
-.quick_search_custom input:checked~.checkmark {
-    background-color: #1A6CBD;
+.quick_search_custom input:checked ~ .checkmark {
+    background-color: #1a6cbd;
 }
 
-.quick_search_custom input:checked~.checkmark:after {
+.quick_search_custom input:checked ~ .checkmark:after {
     display: block;
 }
 
@@ -203,10 +204,10 @@ button {
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     // background-color: $colorBlack6;
     overflow: hidden;
-    color: #4A4A4A;
+    color: #4a4a4a;
 }
 
 ::-webkit-scrollbar {
@@ -240,11 +241,11 @@ h4 {
     z-index: 100;
     height: auto;
     max-height: 20vh;
-    border: #EEEEEE 1px solid;
+    border: #eeeeee 1px solid;
     box-sizing: border-box;
     background: white;
     overflow-y: scroll;
-    box-shadow: 0 5px 14px 5px rgba(0, 0, 0, 0.10);
+    box-shadow: 0 5px 14px 5px rgba(0, 0, 0, 0.1);
     margin-top: 1px;
 
     &__no_result {
@@ -317,7 +318,6 @@ section {
         width: 30vw;
         margin-top: calc(9vh + 30px);
 
-
         // width: 30vw;
         // height: 100vh;
         // text-align: center;
@@ -338,7 +338,7 @@ section {
             padding: 0 10px;
         }
 
-        h5+* {
+        h5 + * {
             border-top: solid 1px $colorBlack3;
             padding-top: 24px;
             margin-top: -24px;
@@ -356,7 +356,7 @@ section {
             margin-top: 1vh;
 
             px {
-                text-align: left
+                text-align: left;
             }
         }
 
@@ -404,13 +404,13 @@ section {
             width: 100%;
             z-index: 1;
             cursor: pointer;
-            box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.10);
+            box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.1);
             border: #eee 1px solid;
             background: white;
-            transition: box-shadow .2s cubic-bezier(0.0, 0.0, 0.2, 1);
+            transition: box-shadow 0.2s cubic-bezier(0, 0, 0.2, 1);
 
             &:hover {
-                box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.10);
+                box-shadow: 0 0 28px 0 rgba(0, 0, 0, 0.1);
             }
 
             &__item {
@@ -434,7 +434,6 @@ section {
         }
     }
 }
-
 
 .wishList__item {
     background-color: #fff;
@@ -509,7 +508,7 @@ section {
     height: 40px;
     width: 40px;
     z-index: 20;
-    transition: .2s cubic-bezier(0.0, 0.0, 0.2, 1);
+    transition: 0.2s cubic-bezier(0, 0, 0.2, 1);
 
     &:hover {
         filter: brightness(90%);
@@ -543,7 +542,6 @@ section {
         color: $colorBlack3;
     }
 }
-
 
 .course-btn {
     background-color: #fff;
@@ -584,15 +582,15 @@ section {
     width: 70%;
     min-width: 800px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-    transition: -webkit-box-shadow .25s;
-    transition: box-shadow .25s;
+    transition: -webkit-box-shadow 0.25s;
+    transition: box-shadow 0.25s;
     display: flex;
     height: 100vh;
 
     &__left {
         flex: 35%;
         height: 100vh;
-        background-color: #FAFAFA;
+        background-color: #fafafa;
         padding: 10vh 3.5vw 0vh 3.5vw;
         overflow-y: scroll;
         overflow-x: hidden;
@@ -627,7 +625,6 @@ section {
         }
     }
 }
-
 
 .arrow-left {
     width: 0;
@@ -671,7 +668,7 @@ section {
 
 .courseSerial {
     padding: 4px 10px;
-    background-color: #CBCBCB;
+    background-color: #cbcbcb;
     color: #fff;
     font-size: 12px;
     border-radius: 15px;
@@ -691,7 +688,7 @@ section {
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.06);
 
     &:hover {
-        background-color: #FAFAFA;
+        background-color: #fafafa;
     }
 
     &:active {
@@ -720,7 +717,6 @@ section {
     background-image: url('../../../../../assets/images/course/clipboard.svg');
 }
 
-
 .material-icons {
     margin: 0px 2px 0px 0px;
 }
@@ -735,7 +731,7 @@ section {
 
 .score-btn {
     display: inline-block;
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     color: $colorBlack66;
     box-shadow: none;
     -webkit-box-shadow: none;
@@ -789,7 +785,7 @@ section {
     margin-top: 3vh;
 
     &__single {
-        background-color: #FAFAFA;
+        background-color: #fafafa;
         display: flex;
         padding: 20px 20px;
         margin: 2vh 0px;
@@ -896,7 +892,7 @@ section {
     @include flex_center_left();
     margin-bottom: 10px;
 
-    &>p {
+    & > p {
         position: relative;
         width: 100%;
         overflow: hidden;
@@ -939,7 +935,7 @@ section {
         height: 100%;
         padding-left: 10px;
 
-        &>p {
+        & > p {
             @include ellipsis();
         }
     }
@@ -1006,8 +1002,7 @@ section {
             background-position: center;
             background-color: $gray;
             color: rgba(0, 0, 0, 0);
-            transition: background-color 0.2s $material_trans,
-                background-size 0.2s $material_trans;
+            transition: background-color 0.2s $material_trans, background-size 0.2s $material_trans;
 
             &:hover {
                 background-color: $warning_red;
@@ -1099,7 +1094,7 @@ section {
         @include flex_center_top();
         @include ellipsis();
 
-        &>p {
+        & > p {
             @include ellipsis();
         }
     }
@@ -1591,7 +1586,7 @@ section {
                 }
 
                 &.other {
-                    &>.class_table_cont_cell_id::before {
+                    & > .class_table_cont_cell_id::before {
                         margin-left: -2px;
                         margin-bottom: 0;
                         margin-right: 0;
@@ -1675,8 +1670,7 @@ section {
 
                 .class_table_cont_cell_button {
                     opacity: 1;
-                    transition: opacity 0.5s $material_trans,
-                        background-color 0.2s $material_trans;
+                    transition: opacity 0.5s $material_trans, background-color 0.2s $material_trans;
                     background-image: url('../../../../../assets/images/table/icon_close.svg');
                     background-size: 8px;
 
@@ -1740,11 +1734,11 @@ section {
             }
         }
 
-        &_row.left>.class_table_cont_cell {
+        &_row.left > .class_table_cont_cell {
             @include flex_center();
             background: $light_1;
 
-            &>p.round {
+            & > p.round {
                 @include flex_center();
                 background: $white;
                 height: 30px;
@@ -1753,13 +1747,13 @@ section {
             }
         }
 
-        &_row.left>.class_table_cont_cell.other {
+        &_row.left > .class_table_cont_cell.other {
             @include flex_center();
             min-height: 50px;
             width: 100%;
             border: $light_2 1px solid;
 
-            &>p {
+            & > p {
                 @include flex_center();
                 background: $white;
                 height: 40px;
@@ -1772,7 +1766,7 @@ section {
 
 //mobile_course.scss
 
-@import "import";
+@import 'import';
 
 @media only screen and (min-width: 966px) {
     .mobile_only {
@@ -1780,7 +1774,7 @@ section {
     }
 }
 
-@media only screen and (max-width: 965px) { 
+@media only screen and (max-width: 965px) {
     .desktop_only {
         display: none !important;
     }
@@ -1804,7 +1798,7 @@ section {
             margin-top: 60px;
             background: $white;
             padding: 4vh 8vw;
-            box-shadow: 0 0 14px 0 rgba(0,0,0,0.10);
+            box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.1);
             .quick_search_area {
                 height: auto;
             }
@@ -1820,7 +1814,7 @@ section {
             .block_title > p {
                 color: $deep_blue;
             }
-            .block_title>p::after {
+            .block_title > p::after {
                 display: none;
             }
             .checkmark {
@@ -1843,7 +1837,7 @@ section {
         padding: 0;
     }
     #course_item {
-        background: $bg_color;        
+        background: $bg_color;
     }
     .courseList__sideList__itemBox {
         height: 100%;
@@ -1857,7 +1851,7 @@ section {
         bottom: 20px !important;
         right: 20px !important;
     }
-    
+
     .list_course_item_right {
         padding: 0;
         .large_right--circle {
@@ -1970,7 +1964,6 @@ section {
             margin: 6px 0;
         }
     }
-
 }
 
 [hidden] {
