fix:  page lock in table-cell component

--- a/src/app/pages/course/components/timetable/table-cell/table-cell.component.html
+++ b/src/app/pages/course/components/timetable/table-cell/table-cell.component.html
@@ -1,9 +1,13 @@
-<div class="class_table_cont_cell class_cell" [ngStyle]="getHeight()" (click)="setTimeFilter()" [ngClass]="getClass()">
-    <div class="class_table_cont_cell_button" (click)="deleteItem()"></div>
-    <p class="class_table_cont_cell_id text_12"
-    [ngClass]="{ previewing: cellData.isPreviewing , rush: cellData.isConflicted }"> {{ cellData.cellStatusTitle }}
-    </p>
-    <p class="class_table_cont_cell_title text_16 text_bold"> {{ cellData.cellStatusText }} </p>
-    <p *ngIf="cellData.time.hrs > 1" class="class_table_cont_cell_description text_14 text_dark">
-        {{ cellData.courseItem.teacher }} </p>
+<div [ngClass]="{ locked: lockStatus }">
+    <div class="class_table_cont_cell class_cell" [ngStyle]="getHeight()" (click)="setTimeFilter()"
+        [ngClass]="getClass()">
+        <div class="class_table_cont_cell_button" (click)="deleteItem()"></div>
+        <p class="class_table_cont_cell_id text_12"
+            [ngClass]="{ previewing: cellData.isPreviewing , rush: cellData.isConflicted }">
+            {{ cellData.cellStatusTitle }}
+        </p>
+        <p class="class_table_cont_cell_title text_16 text_bold"> {{ cellData.cellStatusText }} </p>
+        <p *ngIf="cellData.time.hrs > 1" class="class_table_cont_cell_description text_14 text_dark">
+            {{ cellData.courseItem.teacher }} </p>
+    </div>
 </div>
