feat: course comment dialog

--- a/src/app/pages/course/components/write-comment/write-comment.component.scss
+++ b/src/app/pages/course/components/write-comment/write-comment.component.scss
@@ -12,6 +12,7 @@
         top: 0;
         bottom: 0;
         margin: auto;
+        margin-top: 7vh;
         height: 90vh;
         max-height: 620px;
         width: 90vw;
